<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
    <string name="action_reload">Reload</string>
    <string name="action_force_reload">Force reload</string>
    <string name="action_launch_app">Launch</string>
    <string name="action_pip">Picture in picture</string>
    <string name="action_menu">Menu</string>
    <string name="action_new_tab">New tab</string>
    <string name="action_duplicate_tab">Duplicate tab</string>
    <string name="action_share">Share</string>
    <string name="action_history">History</string>
    <string name="action_bookmarks">Bookmarks</string>
    <string name="action_downloads">Downloads</string>
    <string name="action_add_bookmark">Add bookmark</string>
    <string name="action_forward">Forward</string>
    <string name="action_sessions">Sessions</string>
    <string name="action_new_session">New session</string>
    <string name="action_save_session">Save session as</string>
    <string name="action_edit_sessions">Edit sessions</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="settings">Settings</string>
    <string name="options">Options</string>
    <string name="pref_title_location">Location</string>
    <string name="password">Save your passwords</string>
    <string name="agent">User agent</string>
    <string name="home">Homepage</string>
    <string name="download">Download location</string>
    <string name="settings_advanced">Advanced</string>
    <string name="settings_more">More</string>
    <string name="update_available">Update available</string>
    <string name="update_check_error">Update check error, try again later</string>
    <string name="up_to_date">Fulguris is up to date</string>
    <string name="show">Show</string>
    <string name="cache">Clear cache on exit</string>
    <string name="reflow">Enable text reflow</string>
    <string name="load_images">Load images</string>
    <string name="window">Allow sites to open new windows</string>
    <string name="cookies">Enable cookies</string>
    <string name="size">Text size</string>
    <string name="recommended">Recommended</string>
    <string name="search">Search engine</string>
    <string name="search_hint">Search</string>
    <string name="search_action">@string/search_hint</string>
    <string name="overViewMode">Load pages in overview mode</string>
    <string name="restore_tabs_on_startup">Restore tabs on startup</string>
    <string name="clear_cookies">Clear browser cookies</string>
    <string name="clear_history">Clear browser history</string>
    <string name="action_download">Download</string>
    <string name="action_open">Open</string>
    <string name="action_copy">Copy</string>
    <string name="actions">Actions</string>
    <string name="dialog_title_share">Share this page</string>
    <string name="action_delete">Delete</string>
    <string name="action_remove">Remove</string>
    <string name="action_blank">Blank page</string>
    <string name="action_reset">Reset</string>
    <string name="agent_android_mobile">Android (Mobile)</string>
    <string name="agent_custom">Custom</string>
    <string name="agent_default">Default</string>
    <string name="agent_desktop">Desktop</string>
    <string name="agent_ios_mobile">iOS (Mobile)</string>
    <string name="agent_linux_desktop">Linux (Desktop)</string>
    <string name="agent_macos_desktop">macOS (Desktop)</string>
    <string name="agent_system">System</string>
    <string name="agent_web_view">WebView</string>
    <string name="agent_windows_desktop">Windows (Desktop)</string>
    <string name="agent_hide_device">Hide device</string>
    <string name="title_search_engine">Search engine</string>
    <string name="action_ok">OK</string>
    <string name="dialog_download_title">Download file?</string>
    <string name="dialog_download_message"><![CDATA[<b>%1$s</b> will be saved to your downloads folder<br /><br />Type: %2$s<br />Size: %3$s]]></string>
    <string name="download_as_format">Download as %1$s</string>
    <string name="unknown_file_size">unknown</string>
    <string name="unknown_file_type">unknown</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_warning">Warning</string>
    <string name="title_user_agent">User agent</string>
    <string name="title_download_location">Download location</string>
    <string name="title_custom_homepage">Custom homepage</string>
    <string name="action_webpage">Web page</string>
    <string name="action_main_menu">Main menu</string>
    <string name="title_clear_history">Clear history</string>
    <string name="title_clear_cookies">Clear cookies</string>
    <string name="dialog_history">Would you like to clear all browser history?</string>
    <string name="dialog_cookies">Would you like to clear all browser cookies?</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_ask">Ask</string>
    <string name="layer_type_none">None</string>
    <string name="layer_type_software">Software - WebGL off</string>
    <string name="layer_type_hardware">Hardware - WebGL on</string>
    <string name="action_proceed">Proceed</string>
    <string name="action_abort">Abort</string>
    <string name="title_text_size">Text size</string>
    <string name="title_error">Error</string>
    <string name="hint_title">Title</string>
    <string name="hint_url">URL</string>
    <string name="title_edit_bookmark">Edit bookmark</string>
    <string name="action_edit">Edit</string>
    <string name="downloads_list">Downloads</string>
    <string name="pref_title_downloads_open_folder">Open folder</string>
    <string name="pref_title_downloads_remove_all">Remove all</string>
    <string name="pref_summary_downloads_remove_all">Remove all downloads from list but keep files</string>
    <string name="pref_title_downloads_clean">Clean up</string>
    <string name="pref_summary_downloads_clean">Remove failed and orphaned downloads</string>
    <string name="pref_title_downloads_delete_all">Delete all</string>
    <string name="pref_summary_downloads_delete_all">Remove all downloads and delete files</string>
    <string name="dialog_title_remove_all_downloads">Remove all downloads?</string>
    <string name="dialog_message_remove_all_downloads">All download entries will be removed from the list but files will be kept</string>
    <string name="dialog_title_clean_downloads">Clean up downloads?</string>
    <string name="dialog_message_clean_downloads">Failed and orphaned download entries will be removed from the list</string>
    <string name="dialog_title_delete_all_downloads">Delete all downloads?</string>
    <string name="dialog_message_delete_all_downloads">All download entries will be removed and files will be permanently deleted</string>
    <string name="pref_summary_no_downloads">Your download list is empty</string>
    <string name="pref_summary_loading_downloads">Loading %1$d / %2$d</string>
    <string name="pref_summary_updating_downloads">Updating %1$d / %2$d</string>
    <string name="pref_summary_downloads_count">You have %d download</string>
    <string name="pref_summary_downloads_count_plural">You have %d downloads</string>
    <string name="cancel_download">Cancel download</string>
    <string name="open_download">Open</string>
    <string name="share_file">Share file</string>
    <string name="share_link">Share link</string>
    <string name="copy_name">Copy name</string>
    <string name="copy_path">Copy path</string>
    <string name="remove_from_list">Remove from list</string>
    <string name="remove_and_keep_file">Remove and keep</string>
    <string name="dialog_title_remove_and_keep">Remove and keep file?</string>
    <string name="dialog_message_remove_and_keep">The download entry will be removed from the list but the file will be kept:\n\n%s</string>
    <string name="remove_and_delete_file">Remove and delete</string>
    <string name="action_incognito">Stealth</string>
    <string name="action_show_homepage">Show homepage</string>
    <string name="action_back">Back</string>
    <string name="action_find">Find in page</string>
    <string name="incognito_cookies">Enable cookies in stealth mode</string>
    <string name="generic_import">Import</string>
    <string name="export_bookmarks">Export bookmarks to backup</string>
    <string name="import_backup">Import bookmarks from backup</string>
    <string name="bookmark_settings">Bookmarks</string>
    <string name="settings_contribute">Contribute</string>
    <string name="pref_title_crash_report">Crash reports</string>
    <string name="pref_title_analytics">Analytics</string>
    <string name="pref_summary_on_crash_reports">Help improve the app by sending crash reports</string>
    <string name="pref_summary_off_crash_reports">Crash reports will not be sent</string>
    <string name="pref_summary_on_analytics">Help improve the app by sending usage data</string>
    <string name="pref_summary_off_analytics">Usage data will not be sent</string>
    <string name="pref_title_no_sponsorship">In-app sponsorship not available</string>
    <string name="pref_summary_no_sponsorship">Use Fulguris from Google Play to sponsor us.</string>
    <string name="pref_title_free_download">Free download</string>
    <string name="pref_summary_free_download">Fulguris is Open Source Software. You can download our free edition including full feature set and unlimited tabs.</string>
    <string name="pref_title_sponsorship_github">Sponsor us on GitHub</string>
    <string name="pref_summary_sponsorship_github">You can sponsor our work on GitHub to help make this project a success.</string>
    <string name="pref_title_sponsorship_five_stars">Five stars review</string>
    <string name="pref_summary_sponsorship_five_stars">Giving us a five stars review on Google Play is a great way to help this project.</string>
    <string name="pref_title_contribute_translations">Translations</string>
    <string name="pref_summary_contribute_translations">You can help translate Fulguris to your locale language on Crowdin.</string>
    <string name="pref_title_contribute_share">Spread the word</string>
    <string name="pref_summary_contribute_share">Dazzle your friends and communities by sharing Fulguris with them.</string>
    <string name="reading_mode">Reader mode</string>
    <string name="text_encoding">Text encoding</string>
    <string name="reset_settings">Reset settings</string>
    <string name="action_add_to_homescreen">Add to home screen</string>
    <string name="action_delete_all_bookmarks">Delete all bookmarks</string>
    <string name="debug_leak_canary">LeakCanary</string>
    <string name="pref_title_crash_logs">Crash logs</string>
    <string name="pref_summary_crash_logs">Write crash logs to file system.\nTap to open folder. Please provide relevant file when reporting a bug.</string>
    <string name="pref_title_logs">Logs</string>
    <string name="pref_summary_on_logs">Enabled</string>
    <string name="pref_summary_off_logs">Disabled</string>
    <string name="pref_category_title_session_export">Export session</string>
    <string name="pref_category_summary_session_export">Pick the session you want to export</string>
    <string name="export_settings">Export settings to backup</string>
    <string name="import_settings">Import settings from backup</string>
    <string name="intro_description_ad_blocker">Enable our powerful ad blocker to browse faster, safer, and with fewer distractions. You can always change this later in settings.</string>
    <string name="pref_title_enable_ad_blocker">Ad blocker</string>
    <string name="pref_summary_on_enable_ad_blocker">Enjoy a cleaner, safer web experience</string>
    <string name="pref_summary_off_enable_ad_blocker">Enjoy an unfiltered, original version of the web</string>
</resources>