<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/settings_advanced">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="allow_new_window"
            android:summary="@string/recommended"
            android:title="@string/window" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="allow_cookies"
            android:summary="@string/recommended"
            android:title="@string/cookies" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="incognito_cookies"
            android:title="@string/incognito_cookies" />
        <Preference
            android:key="text_encoding"
            android:title="@string/text_encoding" />

    </PreferenceCategory>


</PreferenceScreen>