<?xml version="1.0" encoding="utf-8"?>
<!--
This is loaded and displayed by our ad blocker onboarding intro slide.
It is not intended to be shown in application menu or settings.
Should only be shown on first application start-up.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="ad_blocker_description"
        android:title="@string/intro_description_ad_blocker"
        android:selectable="false"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <x.SwitchPreference
        android:key="@string/pref_key_content_control"
        android:title="@string/pref_title_enable_ad_blocker"
        android:summaryOn="@string/pref_summary_on_enable_ad_blocker"
        android:summaryOff="@string/pref_summary_off_enable_ad_blocker"
        app:icon="@drawable/ic_block"
        android:defaultValue="false"
        app:iconSpaceReserved="true"
        app:singleLineTitle="false" />

</PreferenceScreen>
